--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,10 +7,9 @@ html{
 body{
 	position: relative;
 	min-height: 100%;
-	padding-bottom: 5rem;
 }
 .bg-light{
-	background-color: #02aadd !important;
+	background-color: #006e87 !important;
 }
 .margin-top-20{
 	margin-top: 20px;
@@ -59,9 +58,45 @@ body{
 .footer-bottom{
 	padding: 20px;
 	margin-top: 20px;
-	background: #02aadd;
-	position: absolute;
-	right: 0;
-	left: 0;
-	bottom: 0;
+	background: #262626;
+	/*position: absolute;*/
+	/*right: 0;*/
+	/*left: 0;*/
+	/*bottom: 0;*/
+	color: #fff;
+}
+
+.navbar-dark .navbar-nav .active>.nav-link, .navbar-dark .navbar-nav .nav-link.active{
+	color: #000;
+	background: #fff;
+	border-radius: 10px;
+}
+
+
+.navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover{
+	color: #000;
+	background: #fff;
+	border-radius: 10px;
+}
+.search-icon-button{
+	background: #FDD922;
+	border: 1px solid #FDD922;
+	transition: .4s;
+}
+.search-icon-button:hover{
+	background: #FDD922;
+	border: 1px solid #FDD922;
+	color: #fff;
+}
+.btn-cart-nav{
+
+}
+
+.btn-cart-nav:hover{
+	background: inherit!important;
+}
+.navbar-dark .navbar-nav .nav-link{
+	color: #fff;
+	padding-right: 15px;
+	margin-right: 5px;
 }
